# bevy_text_furigana

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  text2d.rs  ui.rs
src/: lib.rs  text2d.rs  ui.rs
